[gd_scene load_steps=5 format=3 uid="uid://b2m6vj0fmbt5e"]

[ext_resource type="Script" path="res://Scenes/BaseGameUI/BaseGameUI.gd" id="1_81gpw"]
[ext_resource type="PackedScene" uid="uid://b8c3jkcbcvs5k" path="res://Scenes/BaseWorld/BaseWorld.tscn" id="1_uiw3u"]
[ext_resource type="PackedScene" uid="uid://erenao4flmuc" path="res://Scenes/BaseGameUI/cooldown_indcator.tscn" id="3_lg25r"]
[ext_resource type="PackedScene" uid="uid://oahehvtdu4x0" path="res://Scenes/BaseGameUI/ammo_counter.tscn" id="4_4sfmh"]

[node name="BaseGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_81gpw")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(256, 150)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="BaseWorld" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_uiw3u")]

[node name="DashCooldownIndicator" parent="." instance=ExtResource("3_lg25r")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -84.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="AmmoCounter" parent="." instance=ExtResource("4_4sfmh")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = -20.0
grow_vertical = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="player_dashed" from="SubViewportContainer/SubViewport/BaseWorld" to="." method="_on_base_world_player_dashed"]
[connection signal="player_shoot" from="SubViewportContainer/SubViewport/BaseWorld" to="." method="_on_base_world_player_shoot"]
